build/resources/test/fixtures/public/fail/semantic/ourTests/staticImport.jmm
/*
REASON:
Near line 46: non static method size cannot be referenced from a static context

*/

//key, value can be changed to other Types (e.g. boolean, int[], MyClass)
import Map;
import Map.put(int, int);
import Map.get(int) int;
import Map.clear();
import Map.print();
import Map.contains(int) boolean;
import Map.remove(int) boolean;



//content can be changed to other Types (e.g. boolean, int[], MyClass)
import List;
import List(int);
import List.add(int);
import List.add(int, int);
import List.contains(int) boolean;
import List.remove(int) boolean;
import List.size() int;



import static io.println(int) void;
import static io.println(int,int) void;
import static io.readln() int;

class ImportStressTest {

public static void main(String[] a) {

    List Io;
    int b;

    Io = new List();

    b = (new List()).size();
    b = (Io).size();

    //This makes it fail
    List.size();
    }
}